Added two pictures

--- a/imagebattle/templates/index.html
+++ b/imagebattle/templates/index.html
@@ -7,7 +7,7 @@
     <h1>Battle of Your-Thing</h1>
 <div class="war-container">
 
-    LEFT vs. RIGHT
+    <img src="https://cdn-thumbs.disneymoviesanywhere.com/thumbs/1/213/movie-thumb_217853_web.jpg"> vs. <img src="https://cdn-thumbs.disneymoviesanywhere.com/thumbs/1/145/movie-thumb_0bb442332b6a2_web.jpg">
 
 </div>
 {% endblock %}
