--- a/imagebattle/templates/base.html
+++ b/imagebattle/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Battle of the Your-Thing</title>
+        <title>Battle of Best Movies</title>
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -26,6 +26,7 @@
                         <ul class="nav">
                             {{ nav_link('Vote', 'index') }}
                             {{ nav_link('Leading', 'leading') }}
+							{{ nav_link('Team', 'team') }}
                         </ul>
                     </div>
                 </div>
