--- a/imagebattle/templates/index.html
+++ b/imagebattle/templates/index.html
@@ -7,7 +7,9 @@
     <h1>Battle of Best Movies</h1>
 <div class="war-container">
 
-    <img src="https://cdn-thumbs.disneymoviesanywhere.com/thumbs/1/213/movie-thumb_217853_web.jpg"> vs. <img src="https://cdn-thumbs.disneymoviesanywhere.com/thumbs/1/145/movie-thumb_0bb442332b6a2_web.jpg">
+    <img src="http://static.rogerebert.com/uploads/movie/movie_poster/avatar-2009/large_8Ic8rRVoVrDJJlXzVzGxAesufUV.jpg"> 
+	vs.
+	<img src="https://www.movieposter.com/posters/archive/main/142/MPW-71146">
 
 </div>
 {% endblock %}
