changed picture of Almira

--- a/imagebattle/templates/team.html
+++ b/imagebattle/templates/team.html
@@ -11,7 +11,7 @@
 	Gary Amaro<br/>
 	<img src="https://d.wattpad.com/story_parts/179459282/images/1411547701818a4d.jpg"><br/>
 	Ma. Izabelle Repaso<br/>
-	<img src="http://media.philstar.com/images/the-philippine-star/entertainment/20130715/pokwang.jpg"><br/>
+	<img src="http://bandera.inquirer.net/files/2015/07/cacai-bautista.jpg"><br/>
 	Almira Delmo<br/>
 </div>
 {% endblock %}
